--- a/accountsettings.css
+++ b/accountsettings.css
@@ -164,6 +164,21 @@ form {
 	color: #ffffff;
 }
 /*-----------------------------side-nav---------------------*/
+a:link {
+	text-decoration: none;
+}
+
+a:visited {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+a:active {
+	text-decoration: none;
+}
 .logo-ctn {
 	display: flex;
 	justify-content: center;
