--- a/adverts.css
+++ b/adverts.css
@@ -22,6 +22,8 @@
 	width: 83%;
 	background-color: white;
 	border-bottom: 1px solid #00102d4e;
+	
+	
 }
 .container {
 	margin-left: 17%;
@@ -79,7 +81,7 @@ p {
 .text-flex {
 	display: flex;
 	align-items: center;
-	width: 85%;
+	width: 30%;
 	height: 107px;
 	background: #00102d;
 	margin-top: 10px;
@@ -89,7 +91,7 @@ p {
 /*---------------------------second-rec------------------------------------*/
 
 .second-rec {
-	width: 1092px;
+	width:90%;
 	height: 176px;
 	background-color: white;
 	background: #ffffff;
@@ -98,6 +100,7 @@ p {
 	margin-top: 40px;
 	margin-bottom: 50px;
 	align-items: center;
+	margin-left: 20px;
 }
 form {
 	padding-top: 25px;
@@ -118,7 +121,7 @@ form {
 	width: 100%;
 	align-items: center;
 }
-.search-div {
+.search-div{
 	width: 384px;
 	height: 46px;
 	display: flex;
@@ -134,7 +137,7 @@ form {
 	padding-left: 20px;
 	border: none;
 }
-.search-img {
+.search-img{
 	padding-left: 10px;
 }
 .date {
@@ -165,9 +168,10 @@ form {
 }
 /*-------------------------big rec---------------------------------*/
 .big-rec {
-	width: 1092p;
+	width:  90%;
 	height: 402px;
 	border-radius: 8px;
+	margin-left: 20px;
 }
 table {
 	border-collapse: collapse;
@@ -197,13 +201,13 @@ td {
 	line-height: 20.26px;
 	align-items: center;
 	margin: 50px;
-	color: #75759e;
+	color: #75759E;
 }
 .active {
-	color: #4cd964;
+	color: #4CD964;
 }
 .completed {
-	color: #ff3b30;
+	color: #FF3B30;
 }
 .arrow {
 	border-radius: 50%;
@@ -298,20 +302,21 @@ a:active {
 .box {
 	width: 32px;
 	height: 32px;
-	border-radius: 4px;
-	background: #ffffff;
-	border: 1px solid #00102d;
+    border-radius: 4px;
+	background: #FFFFFF;
+	border: 1px solid #00102D;
 	box-sizing: border-box;
 	margin-left: 5px;
 	text-align: center;
 }
-.box p {
-	font-family: "Overpass";
+ .box p {
+	font-family: 'Overpass';
 	font-style: normal;
 	font-weight: 700;
 	font-size: 14px;
 	text-align: center;
 	padding-top: 8px;
+	
 }
 .box-img {
 	padding-top: 8px;
