--- a/coinspricing.css
+++ b/coinspricing.css
@@ -22,8 +22,6 @@
 	width: 83%;
 	background-color: white;
 	border-bottom: 1px solid #00102d4e;
-	
-	
 }
 .container {
 	margin-left: 17%;
@@ -35,6 +33,10 @@
 	gap: 7px;
 	align-items: center;
 	margin-right: 30px;
+}
+.menu-icon {
+	width: 24px;
+	display: none;
 }
 
 /* nav ul {
@@ -53,17 +55,45 @@ p {
 	color: #555;
 	cursor: pointer;
 }
+/*----------------------Total div---------------------------------*/
 
-/*---------------------------second-rec------------------------------------*/
 .inner-ctn {
-    margin-top: 140px;
-    margin-left: 40px;
-    margin-right: 40px;
+	padding: 0 40px;
+	margin-top: 120px;
 }
+.textdiv {
+	border-right: 1px solid#E2E2EA;
+	text-align: center;
+	width: 237.5px;
+}
+.small-rec {
+	text-align: center;
+}
+.textdiv p {
+	color: white;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 17.72px;
+}
+.textdiv h2 {
+	color: white;
+	font-size: 24px;
+	font-weight: 600;
+}
+.text-flex {
+	display: flex;
+	align-items: center;
+	width: 85%;
+	height: 107px;
+	background: #00102d;
+	margin-top: 10px;
+	border-radius: 8px;
+	box-shadow: 0px 4px 16px rgba(189, 205, 236, 0.6);
+}
+/*---------------------------second-rec------------------------------------*/
+
 .second-rec {
-   
-	width: 90%;
-	height: 176px;
+	width: 100%;
 	background-color: white;
 	background: #ffffff;
 	border: 1px solid #e1edfe;
@@ -71,28 +101,22 @@ p {
 	margin-top: 40px;
 	margin-bottom: 50px;
 	align-items: center;
+	padding: 25px 20px;
 }
-form {
-	padding-top: 25px;
-}
-.text-wrapper {
-	display: flex;
-	margin: 20px;
+.search_section p,
+.date_section p {
 	margin-bottom: 20px;
-	font-weight: 400;
-	font-size: 15px;
-    gap: 230px;
 }
-
 .input-div {
 	display: flex;
-	margin-left: 20px;
-	width: fit-content;
-	align-items: center;
-    gap: 10px;
+	align-items: flex-end;
+	width: 100%;
 }
-.search-div{
-	width: 384px;
+.search_section {
+	width: 35%;
+}
+.search-div {
+	width: 100%;
 	height: 46px;
 	display: flex;
 	border: 1px solid #e1edfe;
@@ -100,27 +124,41 @@ form {
 	align-items: center;
 }
 .search {
-	width: 384px;
+	outline: none;
+	width: 100%;
 	height: 46px;
 	border: 1px solid #e1edfe;
 	border-radius: 8px;
 	padding-left: 20px;
 	border: none;
 }
-.search-img{
+.search-img {
 	padding-left: 10px;
 }
+.date_section {
+	width: 40%;
+}
+.date_ctn {
+	width: 100%;
+	display: flex;
+}
 .date {
-	width: 167px;
+	width: 50%;
 	height: 46px;
 	margin-left: 10px;
 	border: 1px solid #e1edfe;
 	border-radius: 8px;
 	padding-left: 10px;
 }
+.input_btn {
+	display: flex;
+	align-items: center;
+	width: 25%;
+}
 .refine-search {
-	width: 162.42px;
+	width: 50%;
 	height: 45px;
+	font-size: 14px;
 	margin-left: 10px;
 	background-color: #f1aa83;
 	color: white;
@@ -136,28 +174,20 @@ form {
 	font-weight: 500;
 	font-size: 13px;
 }
-.edit {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-}
 /*-------------------------big rec---------------------------------*/
 .big-rec {
-	width:  100%;
-	height: 402px;
+	width: 1092p;
+	height: fit-content;
 	border-radius: 8px;
 }
 table {
 	border-collapse: collapse;
 	width: 100%;
-   
 }
 tr {
 	height: 64px;
-     
 }
 th {
-     margin-left: 30px;
 	text-align: left;
 	padding: 8px;
 	background: #f5f8ff;
@@ -166,25 +196,25 @@ th {
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 20px;
-	margin: 30px;
+	margin: 50px;
 }
 td {
 	text-align: left;
-	padding: 3px;
+	padding: 8px;
 	font-family: "Overpass";
 	font-style: normal;
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 20.26px;
 	align-items: center;
-	margin: 10px;
-	color: #75759E;
+	margin: 50px;
+	color: #75759e;
 }
 .active {
-	color: #4CD964;
+	color: #4cd964;
 }
 .completed {
-	color: #FF3B30;
+	color: #ff3b30;
 }
 .arrow {
 	border-radius: 50%;
@@ -279,22 +309,125 @@ a:active {
 .box {
 	width: 32px;
 	height: 32px;
-    border-radius: 4px;
-	background: #FFFFFF;
-	border: 1px solid #00102D;
+	border-radius: 4px;
+	background: #ffffff;
+	border: 1px solid #00102d;
 	box-sizing: border-box;
 	margin-left: 5px;
 	text-align: center;
 }
- .box p {
-	font-family: 'Overpass';
+.box p {
+	font-family: "Overpass";
 	font-style: normal;
 	font-weight: 700;
 	font-size: 14px;
 	text-align: center;
 	padding-top: 8px;
-	
 }
 .box-img {
 	padding-top: 8px;
+}
+
+.arrow {
+	display: none;
+}
+/*------------------------menu icons -----------------------*/
+
+/*------------------------media query section -------------------------*/
+@media screen and (max-width: 480px)  {
+	
+	.container {
+		width: 100%;
+		margin: 0px;
+		height: fit-content;
+	}
+	.menu-icon {
+		display: block;
+	}
+	.page-ctn {
+		width: 100%;
+		margin-left: 0 	;
+
+		align-items: flex-end;
+	}
+	.user-ctn {
+		display: none;
+	}
+	.navbar {
+		width: 95%;
+		justify-content: space-between;
+		margin: 0px;
+		display: flex;
+		gap: 150px;
+		align-items: center;
+		z-index: 20;
+	}
+	.form {
+		width: 100%;
+		margin: 0px;
+	}
+	.text-wrapper {
+		width: 100%;
+		flex-direction: column;
+	}
+	.recta-div {
+		width: 100%;
+		overflow: auto;
+	}
+	.input-div {
+		width: 100%;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	.search_section {
+		margin-top: 15px;
+		width: 100%;
+	}
+	.date_section {
+		margin-top: 15px;
+		width: 100%;
+	}
+	.input_btn {
+		margin-top: 15px;
+		width: 100%;
+	}
+	.inner-ctn {
+		width: 100%;
+		padding: 0px;
+		margin: 10px;
+		margin-top: 120px;
+	}
+	.second-rec {
+		flex-direction: column;
+		width: 85%;
+	}
+	.text-flex {
+		width: fit-content;
+	}
+
+	.textdiv {
+		width: 90vw;
+	}
+
+	.arrow {
+		display: block;
+		position: absolute;
+		left: 95%;
+	}
+
+	.big-rec {
+		width: 100%;
+		overflow-y: auto;
+	}
+	.side-nav {
+		display: none;
+	}
+	.search {
+		width: 80%;
+		flex-direction: column;
+	}
+
+	.search-div {
+		width: 100%;
+	}
 }
