--- a/contest.css
+++ b/contest.css
@@ -104,10 +104,8 @@ p {
 	box-shadow: 0px 4px 16px rgba(189, 205, 236, 0.6);
 }
 /*---------------------------second-rec------------------------------------*/
-
 .second-rec {
-	width: 1092px;
-	height: 176px;
+	width: 100%;
 	background-color: white;
 	background: #ffffff;
 	border: 1px solid #e1edfe;
@@ -115,28 +113,22 @@ p {
 	margin-top: 40px;
 	margin-bottom: 50px;
 	align-items: center;
+	padding: 25px 20px;
 }
-form {
-	padding-top: 25px;
-}
-.text-wrapper {
-	display: flex;
-	margin: 20px;
+.search_section p,
+.date_section p {
 	margin-bottom: 20px;
-	font-weight: 400;
-	font-size: 15px;
-}
-.text-wrapper p {
-	margin-right: 200px;
 }
 .input-div {
 	display: flex;
-	margin-left: 20px;
+	align-items: flex-end;
 	width: 100%;
-	align-items: center;
+}
+.search_section {
+	width: 35%;
 }
 .search-div {
-	width: 384px;
+	width: 100%;
 	height: 46px;
 	display: flex;
 	border: 1px solid #e1edfe;
@@ -144,7 +136,8 @@ form {
 	align-items: center;
 }
 .search {
-	width: 384px;
+	outline: none;
+	width: 100%;
 	height: 46px;
 	border: 1px solid #e1edfe;
 	border-radius: 8px;
@@ -154,17 +147,30 @@ form {
 .search-img {
 	padding-left: 10px;
 }
+.date_section {
+	width: 40%;
+}
+.date_ctn {
+	width: 100%;
+	display: flex;
+}
 .date {
-	width: 167px;
+	width: 50%;
 	height: 46px;
 	margin-left: 10px;
 	border: 1px solid #e1edfe;
 	border-radius: 8px;
 	padding-left: 10px;
 }
+.input_btn {
+	display: flex;
+	align-items: center;
+	width: 25%;
+}
 .refine-search {
-	width: 162.42px;
+	width: 50%;
 	height: 45px;
+	font-size: 14px;
 	margin-left: 10px;
 	background-color: #f1aa83;
 	color: white;
@@ -182,7 +188,7 @@ form {
 }
 /*-------------------------big rec---------------------------------*/
 .big-rec {
-	width: 1092p;
+	width: 100%;
 	height: 402px;
 	border-radius: 8px;
 }
@@ -486,4 +492,102 @@ a:active {
 	width: 252px;
 	height: 45px;
     margin-top: 82px;
+}
+/*------------------------media query section -------------------------*/
+@media screen and (max-width: 480px)  {
+	
+	.container {
+		width: 100%;
+		margin: 0px;
+		height: fit-content;
+	}
+	.menu-icon {
+		display: block;
+	}
+	.page-ctn {
+		width: 100%;
+		margin-left: 0 	;
+
+		align-items: flex-end;
+	}
+	.user-ctn {
+		display: none;
+	}
+	.navbar {
+		width: 95%;
+		justify-content: space-between;
+		margin: 0px;
+		display: flex;
+		gap: 150px;
+		align-items: center;
+		z-index: 20;
+	}
+	.form {
+		width: 100%;
+		margin: 0px;
+	}
+	.text-wrapper {
+		width: 100%;
+		flex-direction: column;
+	}
+	.recta-div {
+		width: 100%;
+		overflow: auto;
+	}
+	.input-div {
+		width: 100%;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	.search_section {
+		margin-top: 15px;
+		width: 100%;
+	}
+	.date_section {
+		margin-top: 15px;
+		width: 100%;
+	}
+	.input_btn {
+		margin-top: 15px;
+		width: 100%;
+	}
+	.inner-ctn {
+		width: 100%;
+		padding: 0px;
+		margin: 10px;
+		margin-top: 120px;
+	}
+	.second-rec {
+		flex-direction: column;
+		width: 85%;
+	}
+	.text-flex {
+		width: fit-content;
+	}
+
+	.textdiv {
+		width: 90vw;
+	}
+
+	.arrow {
+		display: block;
+		position: absolute;
+		left: 95%;
+	}
+
+	.big-rec {
+		width: 100%;
+		overflow-y: auto;
+	}
+	.side-nav {
+		display: none;
+	}
+	.search {
+		width: 80%;
+		flex-direction: column;
+	}
+
+	.search-div {
+		width: 100%;
+	}
 }
