--- a/accountsettings.css
+++ b/accountsettings.css
@@ -27,6 +27,10 @@
 	margin-left: 17%;
 	width: 83%;
 }
+.menu-icon {
+	width: 24px;
+	display: none;
+}
 
 .user-ctn {
 	display: flex;
@@ -111,6 +115,7 @@ form {
 	line-height: 30px;
 	align-items: center;
 	color: #4a6495;
+	
 }
 .current-div {
 	margin-bottom: 20px;
@@ -122,6 +127,7 @@ form {
 	line-height: 18px;
 	color: #00102d;
 	margin-bottom: 10px;
+	outline: none;
 }
 .input1-div {
 	width: 400px;
@@ -134,12 +140,14 @@ form {
 	justify-content: space-between;
 	align-items: center;
 	padding-right: 10px;
+	
 }
 .current-ps {
 	height: 70px;
 	width: 100%;
 	border: none;
 	padding-left: 10px;
+	outline: none;
 }
 .show-ps {
 	color: #818181;
@@ -270,6 +278,62 @@ a:active {
 .box-img {
 	padding-top: 8px;
 }
+/*------------------------menu icons -----------------------*/
+.sidebar-bg {
+	width: 100%;
+	height: 100vh;
+	z-index: 150;
+	background-color: #00000065;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+}
+
+.sidenav {
+	height: 100vh;
+	width: 25%;
+	background-color: white;
+	padding-top: 20px;
+	transition: 0.10s;
+	/* z-index: 150; */
+	text-align: center;
+}
+.sidenav-2 {
+	background: #00102d;
+}
+.sidenav-2 li {
+	padding: 18px 13px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.171);
+	cursor: pointer;
+	margin: auto;
+	list-style: none;
+    color: #ffffff
+	
+}
+.sidenav-2 li a {
+	color: #ffffff
+}
+.sidenav-2 li a:hover {
+	color: red;
+	padding: 10px;
+}
+.sec- {
+	color: #f1aa83;
+	cursor: pointer;
+	background-color: #f1aa8323;
+	border-left: 4px solid #f1aa83;
+}
+.closebtn {
+	display: flex;
+	align-items: center;
+	padding-left: 10px;
+	gap: 20px;
+	margin-top: 10px;
+}
+.back-white {
+	color: white;
+}
 /*----------------------------media query----------------------*/
 @media screen and (max-width: 480px)  {
 .container {
@@ -314,4 +378,14 @@ a:active {
 	.sav-ctn {
 		margin-top: 20px;
 	}
+		.menu-icon {
+		display: block;
+	}
+		.sidenav-2 {
+		padding-top: 15px;
+	}
+	.sidenav-2 a {
+		font-size: 18px;
+	}
+	
 }
