--- a/coinspricing.css
+++ b/coinspricing.css
@@ -23,6 +23,10 @@
 	background-color: white;
 	border-bottom: 1px solid #00102d4e;
 }
+.menu-icon {
+	width: 24px;
+	display: none;
+}
 .container {
 	margin-left: 17%;
 	width: 83%;
@@ -332,7 +336,61 @@ a:active {
 	display: none;
 }
 /*------------------------menu icons -----------------------*/
+.sidebar-bg {
+	width: 100%;
+	height: 100vh;
+	z-index: 150;
+	background-color: #00000065;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+}
 
+.sidenav {
+	height: 100vh;
+	width: 25%;
+	background-color: white;
+	padding-top: 20px;
+	transition: 0.10s;
+	/* z-index: 150; */
+	text-align: center;
+}
+.sidenav-2 {
+	background: #00102d;
+}
+.sidenav-2 li {
+	padding: 18px 13px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.171);
+	cursor: pointer;
+	margin: auto;
+	list-style: none;
+    color: #ffffff
+	
+}
+.sidenav-2 li a {
+	color: #ffffff
+}
+.sidenav-2 li a:hover {
+	color: red;
+	padding: 10px;
+}
+.sec- {
+	color: #f1aa83;
+	cursor: pointer;
+	background-color: #f1aa8323;
+	border-left: 4px solid #f1aa83;
+}
+.closebtn {
+	display: flex;
+	align-items: center;
+	padding-left: 10px;
+	gap: 20px;
+	margin-top: 10px;
+}
+.back-white {
+	color: white;
+}
 /*------------------------media query section -------------------------*/
 @media screen and (max-width: 480px)  {
 	
@@ -429,5 +487,14 @@ a:active {
 
 	.search-div {
 		width: 100%;
+	}
+		.menu-icon {
+		display: block;
+	}
+		.sidenav-2 {
+		padding-top: 15px;
+	}
+	.sidenav-2 a {
+		font-size: 18px;
 	}
 }
