--- a/contest.css
+++ b/contest.css
@@ -23,6 +23,10 @@
 	background-color: white;
 	border-bottom: 1px solid #00102d4e;
 }
+.menu-icon {
+	width: 24px;
+	display: none;
+}
 .container {
 	margin-left: 17%;
 	width: 83%;
@@ -96,7 +100,7 @@ p {
 .text-flex {
 	display: flex;
 	align-items: center;
-	width: 60%;
+	width: 85%;
 	height: 107px;
 	background: #00102d;
 	margin-top: 10px;
@@ -161,6 +165,7 @@ p {
 	border: 1px solid #e1edfe;
 	border-radius: 8px;
 	padding-left: 10px;
+	outline: none;
 }
 .input_btn {
 	display: flex;
@@ -404,6 +409,7 @@ a:active {
 	height: 25px;
 	border: none;
 	padding-left: 20px;
+	outline: none;
 }
 .div-please {
     flex-basis: 48%;
@@ -436,6 +442,7 @@ a:active {
 	font-weight: 400;
 	font-size: 16px;
 	color: #818181;
+	outline: none;
 }
 .total-div {
 	display: flex;
@@ -464,6 +471,7 @@ a:active {
 	border: none;
 	padding: 5px;
 	padding-right: 30px;
+	outline: none;
 }
 .write-ctn {
 	width: 100%;
@@ -480,6 +488,7 @@ a:active {
 	width: 100%;
 	height: 89px;
 	border: 1px solid #e1edfe;
+	outline: none;
 }
 .button-wrap- {
 	justify-content: center;
@@ -493,9 +502,64 @@ a:active {
 	height: 45px;
     margin-top: 82px;
 }
-/*------------------------media query section -------------------------*/
-@media screen and (max-width: 480px)  {
+/*------------------------menu icons -----------------------*/
+.sidebar-bg {
+	width: 100%;
+	height: 100vh;
+	z-index: 150;
+	background-color: #00000065;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+}
+
+.sidenav {
+	height: 100vh;
+	width: 25%;
+	background-color: white;
+	padding-top: 20px;
+	transition: 0.10s;
+	/* z-index: 150; */
+	text-align: center;
+}
+.sidenav-2 {
+	background: #00102d;
+}
+.sidenav-2 li {
+	padding: 18px 13px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.171);
+	cursor: pointer;
+	margin: auto;
+	list-style: none;
+    color: #ffffff
 	
+}
+.sidenav-2 li a {
+	color: #ffffff
+}
+.sidenav-2 li a:hover {
+	color: red;
+	padding: 10px;
+}
+.sec- {
+	color: #f1aa83;
+	cursor: pointer;
+	background-color: #f1aa8323;
+	border-left: 4px solid #f1aa83;
+}
+.closebtn {
+	display: flex;
+	align-items: center;
+	padding-left: 10px;
+	gap: 20px;
+	margin-top: 10px;
+}
+.back-white {
+	color: white;
+}
+/*------------------------media query section -------------------------*/
+@media screen and (max-width: 480px) {
 	.container {
 		width: 100%;
 		margin: 0px;
@@ -506,7 +570,7 @@ a:active {
 	}
 	.page-ctn {
 		width: 100%;
-		margin-left: 0 	;
+		margin-left: 0;
 
 		align-items: flex-end;
 	}
@@ -518,7 +582,6 @@ a:active {
 		justify-content: space-between;
 		margin: 0px;
 		display: flex;
-		gap: 150px;
 		align-items: center;
 		z-index: 20;
 	}
@@ -590,4 +653,11 @@ a:active {
 	.search-div {
 		width: 100%;
 	}
+	.sidenav-2 {
+		padding-top: 15px;
+	}
+	.sidenav-2 a {
+		font-size: 18px;
+	}
+	
 }
