--- a/dashboard.css
+++ b/dashboard.css
@@ -143,6 +143,7 @@ p {
 	display: flex;
 }
 .date {
+	outline: none;
 	width: 50%;
 	height: 46px;
 	margin-left: 10px;
@@ -176,7 +177,7 @@ p {
 }
 /*-------------------------big rec---------------------------------*/
 .big-rec {
-	width: 1092p;
+	width: 100%;
 	height: fit-content;
 	border-radius: 8px;
 }
@@ -297,6 +298,8 @@ a:active {
 	text-align: center;
 	align-items: center;
 }
+
+
 /*--------------------------page-ctn-----------------------------------*/
 
 .page-ctn {
@@ -332,10 +335,64 @@ a:active {
 	display: none;
 }
 /*------------------------menu icons -----------------------*/
+.sidebar-bg {
+	width: 100%;
+	height: 100vh;
+	z-index: 150;
+	background-color: #00000065;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+}
+
+.sidenav {
+	height: 100vh;
+	width: 25%;
+	background-color: white;
+	padding-top: 20px;
+	transition: 0.10s;
+	/* z-index: 150; */
+	text-align: center;
+}
+.sidenav-2 {
+	background: #00102d;
+}
+.sidenav-2 li {
+	padding: 18px 13px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.171);
+	cursor: pointer;
+	margin: auto;
+	list-style: none;
+    color: #ffffff
+	
+}
+.sidenav-2 li a {
+	color: #ffffff
+}
+.sidenav-2 li a:hover {
+	color: red;
+	padding: 10px;
+}
+.sec- {
+	color: #f1aa83;
+	cursor: pointer;
+	background-color: #f1aa8323;
+	border-left: 4px solid #f1aa83;
+}
+.closebtn {
+	display: flex;
+	align-items: center;
+	padding-left: 10px;
+	gap: 20px;
+	margin-top: 10px;
+}
+.back-white {
+	color: white;
+}
 
 /*------------------------media query section -------------------------*/
-@media screen and (max-width: 480px)  {
-	
+@media screen and (max-width: 480px) {
 	.container {
 		width: 100%;
 		margin: 0px;
@@ -346,7 +403,7 @@ a:active {
 	}
 	.page-ctn {
 		width: 100%;
-		margin-left: 0 	;
+		margin-left: 0;
 
 		align-items: flex-end;
 	}
@@ -358,7 +415,6 @@ a:active {
 		justify-content: space-between;
 		margin: 0px;
 		display: flex;
-		gap: 150px;
 		align-items: center;
 		z-index: 20;
 	}
@@ -430,4 +486,12 @@ a:active {
 	.search-div {
 		width: 100%;
 	}
+	.sidenav-2 {
+		padding-top: 15px;
+	}
+	.sidenav-2 a {
+		font-size: 18px;
+	}
+	
 }
+
