--- a/adverts.css
+++ b/adverts.css
@@ -96,7 +96,7 @@ p {
 /*---------------------------second-rec------------------------------------*/
 
 .second-rec {
-	width: 100%;
+	width: 90%;
 	background-color: white;
 	background: #ffffff;
 	border: 1px solid #e1edfe;
@@ -105,6 +105,7 @@ p {
 	margin-bottom: 50px;
 	align-items: center;
 	padding: 25px 20px;
+	margin-left: 40px;
 }
 .search_section p,
 .date_section p {
@@ -179,13 +180,14 @@ p {
 }
 /*-------------------------big rec---------------------------------*/
 .big-rec {
-	width: 1092p;
+	width: 100%;
 	height: fit-content;
 	border-radius: 8px;
 }
 table {
 	border-collapse: collapse;
-	width: 100%;
+	width: 90%;
+	margin-left: 40px;
 }
 tr {
 	height: 64px;
@@ -450,10 +452,8 @@ a:active {
 		width: 100%;
 	}
 	.inner-ctn {
-		width: 100%;
-		padding: 0px;
-		margin: 10px;
-		margin-top: 120px;
+    padding: 0 40px;
+    margin-top: 120px;
 	}
 	.second-rec {
 		flex-direction: column;
