--- a/contest.css
+++ b/contest.css
@@ -109,7 +109,7 @@ p {
 }
 /*---------------------------second-rec------------------------------------*/
 .second-rec {
-	width: 100%;
+	/* width: 100%; */
 	background-color: white;
 	background: #ffffff;
 	border: 1px solid #e1edfe;
